--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/lab": "5.0.0-alpha.100",
+    "@mui/material": "^5.10.6",
+    "@mui/system": "^5.10.6",
+    "@mui/utils": "^5.10.6",
     "is-mobile": "^3.1.1",
     "notistack": "^2.0.5",
     "react": "^18.2.0",
